[package]
authors = ["Noah Hüsser <yatekii@yatekii.ch>", "Steven Wittens <steven@acko.net>, Andreas Reich <reichandreas@gmx.de>"]
categories = ["gui", "graphics", "rendering", "rendering::graphics-api"]
description = "A wgpu render backend for imgui-rs."
documentation = "https://docs.rs/imgui-wgpu/"
edition = "2018"
homepage = "https://github.com/Yatekii/imgui-wgpu-rs"
keywords = ["gui", "graphics", "wgpu", "imgui"]
license = "MIT OR Apache-2.0"
name = "imgui-wgpu"
readme = "README.md"
repository = "https://github.com/Yatekii/imgui-wgpu-rs"
version = "0.6.1"

[features]
default = []

[dependencies]
glsl-to-spirv = {version = "0.1", optional = true}
imgui = "0.4"
log = "0.4"
wgpu = {git = "https://github.com/gfx-rs/wgpu-rs.git", rev = "32de700ef908029cc5f8ac3b0befd7439f5bd7bd"}

[dev-dependencies]
env_logger = "0.5"
futures = "0.3"
image = "0.22"
raw-window-handle = "0.3"
winit = "0.21"

[dev-dependencies.imgui-winit-support]
default-features = false
features = ["winit-20"]
version = "0.4"

[package.metadata.docs.rs]
all-features = true
